@@ -1,17 +1,10 @@
 (defproject metabase/cubejs-driver "0.1.0"
   :min-lein-version "2.5.0"
 
-  :dependencies
-  [[com.jayway.jsonpath/json-path "2.3.0"]]
-
-  :jvm-opts
-  ["-XX:+IgnoreUnrecognizedVMOptions"
-   "--add-modules=java.xml.bind"]
-
   :profiles
   {:provided
    {:dependencies
-    [[org.clojure/clojure "1.9.0"]
+    [[org.clojure/clojure "1.10.1"]
      [metabase-core "1.0.0-SNAPSHOT"]]}
 
    :uberjar
